Removed existing QRDecomposition with 2 separate QR decomposition methods. 1. Gram-Schmidt QR Decomposition (GSQRDecomposition) 2. Householder Transformation QR Decomposition (HQRDecomposition)

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# =========================
+# Generated documentation
+# =========================
+
+# Doxygen output
+docs/html/
+docs/latex/
