Matrix: 1. Added new methods (Diag, GetFlatData, PopRow, PopColumn, PopRows, PopColumns). 2. Modified HQRDecomposition to accomodate (full + thin) implementation.
Initializer:
1. Implemented Orthogonal Tensor Initializer method.
2. Fixed a small bug (regarding not getting scaled) in Identity Initializer.

--- a/.gitignore
+++ b/.gitignore
@@ -367,5 +367,6 @@ FodyWeavers.xsd
 # =========================
 
 # Doxygen output
-docs/html/
-docs/latex/
+Tensor/docs
+Tensor/docs/html/
+Tensor/docs/latex/
