--- a/Tensor/Tensor.vcxproj
+++ b/Tensor/Tensor.vcxproj
@@ -207,9 +207,11 @@
     <ClCompile Include="_Tanh.cpp" />
     <ClCompile Include="Tensor.cpp" />
     <ClCompile Include="TensorActivation.cpp" />
-    <ClCompile Include="Math.cpp" />
     <ClCompile Include="TensorSlice.cpp" />
     <ClCompile Include="Utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Math.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
