--- a/Tensor/Tensor.vcxproj
+++ b/Tensor/Tensor.vcxproj
@@ -212,6 +212,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Math.inl" />
+    <None Include="Utils.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
